--- a/Sanitize/Data/Sanitize.Repository.Interfaces/Sanitize.Repository.Interfaces.csproj
+++ b/Sanitize/Data/Sanitize.Repository.Interfaces/Sanitize.Repository.Interfaces.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Shared\Sanitize.Shared.csproj" />
+    <ProjectReference Include="..\..\Core\Sanitize.Core\Sanitize.Core.csproj" />
   </ItemGroup>
 
 </Project>
