--- a/Sanitize/Shared/Sanitize.Shared.csproj
+++ b/Sanitize/Shared/Sanitize.Shared.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Core\Sanitize.Core\Sanitize.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <SupportedPlatform Include="browser" />
   </ItemGroup>
 </Project>
